# ztrace

./: .clang-format  .coveralls.yml  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.md  README.md  coarse.ppm
src/: AABB.h  Camera.h  Colour.h  ColourConverter.h  CompilerAttributes.h  Component.h  CreateAmbientLights.h  Gloss.h  Image.h  License.h  Light.h  LightList.h  Material.h  PPMWriter.h  Random.h  Ray.h  ShadowRay.h  Sphere.h  Traceable.h  TraceableList.h  TraceableNode.h  Types.h  Utils.h  Vector.h  Vector_impl.h  axisAlignedBoundingBox.h  ztrace.h  ztracer.cpp
test/: test_Colour.cpp  test_ColourConverter.cpp  test_Component.cpp  test_Gloss.cpp  test_Image.cpp  test_Material.cpp  test_Ray.cpp  test_ShadowRay.cpp  test_Sphere.cpp  test_TraceableList.cpp  test_TraceableNode.cpp  test_Utils.cpp  test_Vector.cpp  test_Vector_Op_RealVec.cpp  test_Vector_Op_VecReal.cpp  test_Vector_Op_VecVec.cpp
